# ai-dev-tools-zoomcamp-02-assignment

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md  copilot.yml
backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241201_01_create_sessions_and_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: executors.py  health.py  sessions.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: session.py
backend/app/schemas/: execution.py  problem.py  session.py
backend/app/services/: execution_service.py  realtime.py  redis_service.py  session_service.py  sharedb_service.py
backend/app/services/executor/: base.py  python_executor.py  registry.py
backend/app/websocket/: connection_manager.py  sharedb_integration.py
backend/tests/: conftest.py  test_execution.py  test_health.py  test_sessions.py  test_websocket.py
backend/tests/integration/: test_collaborative_editing.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Editor/: MonacoEditor.tsx
frontend/src/components/Layout/: Header.tsx  MainLayout.tsx
frontend/src/components/Output/: ExecutionOutput.tsx
frontend/src/hooks/: useApi.ts  useShareDB.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: api.ts
(+5 files in other folders)
